--- a/style.css
+++ b/style.css
@@ -1,20 +1,10 @@
-.header {
-	background-color:#F00;
-    height:-9px;
-    width:100%;
-	margin-top:-7px;
-	margin-left:-9px;
-	color:#FFF;
-	
+.parent {
+    width: 100px;
+    height: 100px;
+    border-color: black;
+    position: absolute;
 }
-
-body {
-	margin:0;
-	}
-
-.topnav {
-  overflow: hidden;
-  background-color: #000;
+.child {
+    top: 0px;
+    right: 0px;
 }
-  
-
