--- a/style.css
+++ b/style.css
@@ -1,10 +1,28 @@
-.parent {
-    width: 100px;
-    height: 100px;
-    border-color: black;
-    position: absolute;
+.header {
+	background-color: red;
+    height:40px;
+    width:100%; 
+    margin-left: -8px;
+   }
+
+
+   .header h1 {
+	display: contents;
+	color: white;
 }
-.child {
-    top: 0px;
-    right: 0px;
+
+.topnav {
+  overflow: hidden;
+  background-color: #000;
+  width: 100%;
+  height: 50px;
 }
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
