--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+#section-join {
+	background-color: #f28c96ce;
+	background-image: url(img/floral.png)
+}
 .header {
 	background-color: red;
     height:40px;
@@ -52,20 +56,21 @@
 	color: white;
 	font-size: 30px;
 }
-.flex-container {
+#flex-container{
 	display: flex;
-	flex-wrap: nowrap;
-	height: 400px;
+	background-color: white;
 }
-.flex-container div {
+#flex-container figure {
 	
-	width: 100%;
-	margin:0px;
-	line-height: 75px;
-	margin-left: -8px;
-}
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 
-.flex-container p {
+}	
+#flex-container figcaption {
 	text-align: center;
-	
+
 }
+#flex-container i {
+	font-size: 60px;
+} 
