--- a/style.css
+++ b/style.css
@@ -74,3 +74,29 @@
 #flex-container i {
 	font-size: 60px;
 } 
+#portfolio {
+	display: inline-flex;
+	background-color: #F4CF7F;
+	width:100%;
+	 height: 150px;
+
+	
+	
+	}
+	#portfolio img {
+		height:30px;
+		width:20px;
+		
+	}
+	#portfolio figure {
+	
+	display: inline-block;
+	flex-direction: column;
+	align-items: center;
+	}
+	#portfolio figcaption {
+	position:absolute;
+	}
+	#portfolio h2 {
+	text-align:center;
+	}
