--- a/style.css
+++ b/style.css
@@ -74,29 +74,47 @@
 #flex-container i {
 	font-size: 60px;
 } 
-#portfolio {
-	display: inline-flex;
-	background-color: #F4CF7F;
+.section {
+	display:flex;
 	width:100%;
-	 height: 150px;
+	height:440px;
+	background-color:#FFFFB9;
+	}
+	.section h2 {
+	}
+	.section img {
+    width: 190px;
+    height: 170px;
+    margi;n: 45px;
+    padding: 50px;
+    margin-top: 90px;
+	margin-left: 50px;
+		}
+.section1 {
+	display:flex;
+	width:100%;
+	height:100px;
+	background-color:#FFFFB9;
+	}
+	.section1 img {
+    width: 190px;
+    height: 170px;
+    margi;n: 45px;
+    padding: 50px;
+    margin-top: -150px;
+    margin-left: 50px;
+		}
+		.footer {
+			width:100%;
+			height:100px;
+			background-color:transparent;
+			background-color:#FFC1C1;}
 
-	
-	
-	}
-	#portfolio img {
-		height:30px;
-		width:20px;
-		
-	}
-	#portfolio figure {
-	
-	display: inline-block;
-	flex-direction: column;
-	align-items: center;
-	}
-	#portfolio figcaption {
-	position:absolute;
-	}
-	#portfolio h2 {
-	text-align:center;
-	}
+
+.footer i {
+	height:50px;
+  margin: auto;
+  width: 60%;
+  padding: 10px;
+  display:block;
+}
