--- a/style.css
+++ b/style.css
@@ -1,140 +1,178 @@
-#section-join {
-	background-color: #f28c96ce;
-	background-image: url(img/floral.png)
-}
-.header {
-	background-color: red;
-    height:40px;
-    width:100%; 
-    margin-left: -8px;
-   }
 
-
-   .header h1 {
-	display: contents;
-	color: white;
+* {
+    background-image: url("img/floral.png")
 }
 
-.topnav {
-  overflow: hidden;
-  background-color: #000;
-  width: 100%;
-  height: 65px;
-  margin-left: -9px;
-  margin-top: inherit;
+html body {
+    margin: 0;
+    padding: 0;
+}
 
+marquee {
+    width: 100%;
+    color: white;
+    background-color: #ed484c;
 }
-.topnav a {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-.topnav img {
-	height: 50px;
-	width: 100px;
-	float: left;
-	margin-left: 20px;
-	margin-top: 8px;
-}
-.container {
-	width: 100%;
-	height: 300px; 
-	margin-left: -9px;
-}
-.container h1 {
-	text-align: center;
-	margin-top:70px;
-	font-size: -webkit-xxx-large;
-}
-.container button {
-	width: 270px;
-	height: 70px;
-	background-color: black;
-	color: white;
-	font-size: 30px;
-}
-#flex-container{
-	display: flex;
-	background-color: white;
-}
-#flex-container figure {
-	
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 
-}	
-#flex-container figcaption {
-	text-align: center;
+.flex-container {
+    display: flex;
+    background-color: #4c4c4c ;
+    justify-content: right;
+}
 
+.flex-container>div {
+    margin: 10px;
+    padding: 10px;
+    font-size: 15px;
+    color: white;
 }
-#flex-container i {
-	font-size: 60px;
-} 
-#flex-container i:hover {
-	background-color:#F69;
-}
-.section {
-	display:flex;
-	width:100%;
-	height:440px;
-	background-color:#FFFFB9;
-	}
-	.section h2 {
-	}
-	.section img {
-    width: 190px;
-    height: 170px;
-    margi;n: 45px;
-    padding: 50px;
-    margin-top: 90px;
-	margin-left: 50px;
-		}
-.section1 {
-	display:flex;
-	width:100%;
-	height:100px;
-	background-color:#FFFFB9;
-	}
-	.section1 img {
-    width: 190px;
-    height: 170px;
-    margi;n: 45px;
-    padding: 50px;
-    margin-top: -150px;
-    margin-left: 50px;
-		}
-		.footer {
-			width:100%;
-			height:100px;
-			background-color:transparent;
-			background-color:#FFC1C1;}
 
+.flex-container {
+    display: flex;
+    justify-content: flex-end;
+}
 
-.footer button {
-	height:65px;
-    width: 75px;
-	alignment-adjust:central;
-	margin-top:2em;
-	border-radius:50%;
-	background-color:#906;
- 
+div.logo {
+    margin-right: auto;
 }
-.footer button:hover {
-	background-color:#F0F;
+
+img {
+    height: 55px;
+    width: 95px;
 }
-.footer1 {
-	background-color:#000;
-	height:70px;
-	width:100%;
-	color:#999;
-	text-align:center;
-	}
-	.footer1 h4 {
-		color:#999;
-	text-align:center;
-	display:-webkit-inline-box;
-		}
+
+#circle {
+    height: 400px;
+    width: 100%;
+    background-color: #f28d97;
+}
+
+#circle>div {
+    display: flex;
+    justify-content: center;
+    font-size: 25px;
+    padding: 10px;
+}
+
+#circle button {
+    padding: 20px 70px;
+    background-color: white;
+    border: none;
+    color: balck;
+    font-size: 30px;
+}
+#circle button:hover {
+    color: rgb(231, 231, 111);
+    background-color: black;
+}
+p {
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    padding: 30px;
+}
+
+#services {
+    font-family: 'Dancing Script', cursive;
+    margin: 0;
+    background-color: #efece7;
+    height: 400px;
+    width: 100%;
+}
+
+#services>div {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+#creation {
+    height: 400px;
+    width: 100%;
+    background-color: palevioletred;
+}
+
+#creation>div {
+    display: flex;
+    justify-content: center;
+    font-size: 20px;
+    padding: 10px;
+}
+
+.para2 {
+    padding: 20px;
+    margin: 10px 70px;
+    text-align: center;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: rgb(68, 58, 58);
+    color: white;
+    text-align: center;
+    height: 50px;
+    line-height: 50px;
+}
+
+.fig {
+    font-family:'Nunito', sans-serif;
+    display: flex;
+    justify-content: space-between;
+}
+
+#creation figure img {
+    height: 200px;
+    width: 200px;
+}
+
+footer:hover .fa-heart {
+    color: rgb(189, 4, 4);
+}
+
+.images {
+    display: inline-block;
+}
+
+h4 {
+    margin: 0;
+}
+
+.images img {
+    width: 200px;
+    height: 200px;
+    padding: 4em 3.2em;
+    
+}
+
+.portfolio {
+    
+    font-size: 20px;
+    font-family: 'Dancing Script', cursive;
+    text-align: center;
+    background-color: #deceb4;
+}
+
+.icon {
+    height: 200px;
+    line-height: 200px;
+    display: flex;
+    justify-content: center;
+    background-color: #a8bfbe;
+}
+
+.icon button {
+    border: 2px solid black;
+    font-size: 40px;
+    background-color: none;
+    border-radius: 90px 90px;
+    padding: 15px;
+    margin: 5px;
+}
+
+.icon button:hover {
+    color: rgb(231, 231, 111);
+    background-color: black;
+}
+
